# ChatMonk

ChatMonk/: CMakeLists.txt  ChatMonk.kdev4
ChatMonk/.kdev4/: ChatMonk.kdev4
ChatMonk/broker/: CMakeLists.txt  friend_message_listener.h  group_message_listener.h  invitation_message_listener.h  messageconsumer.cpp  messageconsumer.h
ChatMonk/datahandlers/: CMakeLists.txt  datahandler.cpp  datahandler.h  friendhandler.cpp  friendhandler.h  grouphandler.cpp  grouphandler.h  invitationhandler.cpp  invitationhandler.h  messagehandler.cpp  messagehandler.h
ChatMonk/datahandlers/models/: CMakeLists.txt  ChatMessageDB.cpp  ChatMessageDB.h  Group.cpp  Invitation.h  chatmessage.cpp  chatmessage.h  friend.cpp  friend.h  group.cpp  group.h  invitation.cpp  invitation.h
ChatMonk/datahandlers/orm/: Makefile  Makefile.in
ChatMonk/datahandlers/util/: Makefile  Makefile.in
ChatMonk/libs/: librabbitmq.so.1  librabbitmq.so.1.2.1
ChatMonk/network_handler/: CMakeLists.txt  network_callback.h  network_pair.h  networkhandler.cpp  networkhandler.h
ChatMonk/protobuffer/: CMakeLists.txt  chat_monk.pb.cc  chat_monk.pb.h
ChatMonk/table_schemas/: Attachment.cpp  Attachment.h  AttachmentDB.h  ChatMessageDB.cpp  ChatMessageDB.h  Friend.h  Group.h  chatmonk.sql  chatmonk.xml
ChatMonk/views/: colors.h  friendchatwindow.cpp  friendchatwindow.h  friendlistview.cpp  friendlistview.h  groupchatview.cpp  groupchatview.h  grouplistview.cpp  grouplistview.h  inviteacceptance.cpp  inviteacceptance.h  reg_data.h  registrationdialog.cpp  registrationdialog.h
(+10 files in other folders)
